--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 					<h1 class="efectotexto">¿Para qué soy bueno?</h1><br>
 				<p class="mt-4">Hola, soy Esteban Obando González, estoy en el proceso de 
 					finalizar la carrera de Diseño Visual Digital.
-					Me gusta interactuar mucho con photshop de montajes o
-					diseños se puede hacer en el programa, soy curioso y muy 
+					Me gusta interactuar mucho con Photoshop y montajes
+					que se puede hacer en el programa, soy curioso y muy 
 					limpio a la hora de hacer algún proyecto o trabajo. Me gusta
 					el tema de los Objetos en 3D y el programa Zbrush que su 
 					función es modelar y crear su personaje ideal.</p><br>
