--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 					limpio a la hora de hacer algún proyecto o trabajo. Me gusta
 					el tema de los Objetos en 3D y el programa Zbrush que su 
 					función es modelar y crear su personaje ideal.</p><br>
-				<p class="mt-4">obando.esteban.8744 eam.edu.co <br>
+				<p class="mt-4">obando.esteban.8744@eam.edu.co <br>
 					Cel:3197902293</p>
 			</div>
 		</div><br><br><br><br>
